Introducing the 3.0.0b beta.
- Removed unnecessary duplication of code
- Removed the shortcode and all references to this
- Added in page-level positioning
- Added a new takeover

--- a/admin/css/hbi-ad-manager-admin.css
+++ b/admin/css/hbi-ad-manager-admin.css
@@ -4,3 +4,7 @@
 #logical-operator { display: none; }
 #logical-operator.show { display: block; }
 body.settings_page_hbi_ad_manager .one-third { display: table-cell; padding: 15px 25px;  }
+
+.uploaded_image{display: block; width: 200px;}
+.uploaded_image img{width: 200px;}
+.featured_image_upload{display: block; margin-bottom: 10px;}
